# cbr_ros

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
configs/: conf.json  conf1.json  conf_base.json
src/cbr/: package.xml  setup.cfg  setup.py
src/cbr/cbr/: base_bridge.py  brain_node.py  can_bridge.py  cbr_odrive_can_bridge.py  cbr_stand_bridge.py  cbr_state_manager.py  cli_controller.py  controller.py  debug_joy_controller.py  policy.py
src/cbr/launch/: cbr_launch.py  cbr_odrive_test_launch.py
src/cbr_interfaces/: CMakeLists.txt  package.xml
src/cbr_interfaces/action/: Homing.action
